Closed
Bug 219185
Opened 22 years ago
Closed 22 years ago
checkin for bug 218874 probably broke IMAP mail
Categories
(MailNews Core :: Networking: IMAP, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: Mitch, Assigned: Bienvenu)
References
Details
(Keywords: regression)
Attachments
(5 files)
|
3.22 KB,
text/plain
|
Details | |
|
161.03 KB,
text/plain
|
Details | |
|
1.34 KB,
text/plain
|
Details | |
|
1.01 KB,
patch
|
Details | Diff | Splinter Review | |
|
608 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5b) Gecko/20030914
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5b) Gecko/20030914
The checkin for bug 218874 appears to have broken IMAP mail.
Going to any IMAP server i have now fails with a popup saying
"Mail server xxxxx is not an IMAP4 mail server"
Reverting to pre 218874 checkin and all works fine.
Reproducible: Always
Steps to Reproduce:
1. Connect to imap4 mailserver
2.
3.
Actual Results:
see details.
Expected Results:
obvious
Comment 1•22 years ago
|
||
Confirming bug, it works in 2003-09-13-05 and is broken 2003-09-13-22
Updated•22 years ago
|
Keywords: regression
| Assignee | ||
Comment 2•22 years ago
|
||
Is there anything special about your configuration? Are you using SSL? Going
through a firewall? Using a proxy server? This works fine for most people, so
there must be something different about your configuration. Darin tried it on
Linux; I tried it on windows with SSL and non-SSL...
Status: NEW → ASSIGNED
Nope, nothing special. This in on a local UoW imap server (using localhost) with
Linux - i.e. no proxy, no firewall. But also fails with a SSL imap server - so
neither works. Both however use the host "localhost" since the SSL connection
is a tunnel on a different port.
| Assignee | ||
Comment 4•22 years ago
|
||
could you attach an imap protocol log? Do you have pre-auth setup?
http://www.mozilla.org/quality/mailnews/mail-troubleshoot.html#imap
| Assignee | ||
Comment 5•22 years ago
|
||
localhost is somewhat special, but it does work for me, at least on windows,
with a UW server.
Comment 6•22 years ago
|
||
I'm using SSL, port 993, no (local) firewall, no proxy.
I have also had several hangs today with build 2003-09-13-22 on Linux.
This is a new problem as I have used current nightlies for quite some time
without seeing this problem.
Nope no pre-auth setup. I guess i need to compile mozilla with --enable-logging
to get out logging messages. Recompiling now.
| Assignee | ||
Comment 8•22 years ago
|
||
did you explicitly disable logging? It's enabled by default.
Comment 9•22 years ago
|
||
Comment 10•22 years ago
|
||
BTW, the hang is probably bug 219188 as I have a POP account too.
| Reporter | ||
Comment 11•22 years ago
|
||
Ok Mats beat me to it, but my log is exactly the same as his.
Comment 12•22 years ago
|
||
My log is different.
This is imap from behind a linux firewall / nat router. I have the same problem
with imaps. Same log there. Log created with 2003091405 linux.
Updated•22 years ago
|
Flags: blocking1.6a?
Flags: blocking1.5?
| Assignee | ||
Comment 13•22 years ago
|
||
this isn't in 1.5 so it can't block 1.5 - clearing
Flags: blocking1.5?
Comment 14•22 years ago
|
||
| Assignee | ||
Comment 15•22 years ago
|
||
| Assignee | ||
Comment 16•22 years ago
|
||
this fixes ReadNextLine to do the right thing as well.
| Assignee | ||
Comment 17•22 years ago
|
||
fix checked in; please try tomorrow's build, thx.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 18•22 years ago
|
||
Confirmed works with new checkout. Thanks David.
| Assignee | ||
Comment 19•22 years ago
|
||
great, thx, Mitch. Again, sorry for the inconvenience.
Comment 20•22 years ago
|
||
Verified. It works fine in 2003-09-14-22 trunk Linux.
Status: RESOLVED → VERIFIED
Comment 21•22 years ago
|
||
Just a comment for thunderbird 0.3 build contributors. You can safely apply both
the proposed and secondary patches to your tree. I'll be using both in my
official builds.
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•