Bug #219185 --> checkin for bug 218874 probably broke IMAP mail